--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=registration_login-spring-boot-security-thymeleaf
 
 spring.datasource.url=jdbc:mysql://localhost:3306/user
-spring.datasource.password =Rob1n123456789CZ
+spring.datasource.password =root123
 spring.datasource.username=root
 
 
