--- a/pom.xml
+++ b/pom.xml
@@ -83,15 +83,15 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-<!--	<build>-->
-<!--		<plugins>-->
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-starter-parent</artifactId>-->
-<!--				-->
-<!--			</plugin>-->
-<!--		</plugins>-->
-<!--	</build>-->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>
+		</plugins>
+	</build>
 	<build>
 		<plugins>
 			<plugin>
