--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+# Název aplikace
 spring.application.name=registration_login-spring-boot-security-thymeleaf
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user
-spring.datasource.password =root123
+# Konfigurace pro H2 databázi
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
+spring.datasource.password=root123
 
-
+# Automatická aktualizace schématu (pozor, toto m??e vést ke ztrát? dat p?i zm?nách schématu)
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.hibernate.sql = debug
-logging.level.org.hibernate.type = trace
-
+# Logování SQL dotaz?
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type=trace
